# noah

./: .gitignore  .travis.yml  CMakeLists.txt  HACKING.md  Jenkinsfile  LICENSE  Makefile  Portfile  README.md  _fib  _hello  cat  fib  hello  release-engineering.md
include/: common.h  debug.h  malloc.h  mm.h  noah.h  syscall.h  types.h  version.h.in  vmm.h
include/darwin/: select.h
include/linux/: common.h  const.h  errno.h  fs.h  futex.h  ioctl.h  ipc.h  misc.h  mman.h  ptrace.h  random.h  signal.h  socket.h  termios.h  time.h
include/util/: list.h  misc.h  tree.h
include/x86/: idt.h  irq_vectors.h  page.h  segment.h  specialreg.h  vm.h  vmemparam.h  vmx.h
lib/: .dir-locals.el  vmm.c
man/: .gitignore  Makefile  noah.1  noah.js  noah.md
mnt/etc/: resolv.conf
mnt/etc/pacman.d/: mirrorlist  mirrorlist.pacnew
mnt/usr/include/: GeoIP.h  alpm_list.h  (+80 more)
src/: base.c  common.c  common.h  conv.c  debug.c  debug.h  elf.h  hello.S  idt.h  injected.S  main.c  malloc.c  meta_strace.c  mm.c  msr.h  noah_strace.c  page.h  sandbox.c  sandbox.h  segment.h  syscall.h  vmem.h  vmm.c  vmm_pdp.h
src/fs/: fs.c
src/ipc/: futex.c  sem.c  signal.c
src/mm/: malloc.c  mm.c  mmap.c  shm.c
src/net/: net.c
src/proc/: elf.h  exec.c  fork.c  process.c  ptrace.c
src/sys/: sys.c  time.c
src/syscall/: .dir-locals.el  common.c  common.h  elf.h  elf_common.h  exec.c  fork.c  fs.c  futex.c  mm.c  net.c  process.c  signal.c  sys.c  syscall.c  syscall.h  time.c
src/x86/: page.h
test/: CMakeLists.txt  fib.c  test.mk  test.rb
test/include/: noah.S  noah.h  syscall.h  test_assert.h
test/misc/: xmm0.s
test/test_assertion/: a.out  fib.c  test_arch_prctl.c  test_execve.c  test_execve2.c  test_fork.c  test_fork_simple.c  test_sigaction.c  test_sigaltstack.c  test_sigpending.c  test_sigprocmask.c  test_thread.c
test/test_shell/: env.c  env.sh  gcc.sh  gcc_pic.sh  mv.c  mv.sh  nc.sh
test/test_stdout/: cat.c  cat.stdin  echo.c  hello.c  hello2.S  sendmmsg.c  sendmmsg.expected  sigreturn_bug.c  sigreturn_bug.expected  sigsuspend.c  sigsuspend.expected
test/testing_root/: tmp
user/: cat.c  echo.c  fib.c  hello.c  noah.h
util/: get_arch_uland.sh  list_unimpl_syscall.rb  mkgroup.pl  mkpasswd.pl  publish-homebrew.sh  release-engineering.sh  setup.sh
(+195 files in other folders)
